test/integration/bad/lang/tparam_tuple_int.stan
transformed parameters {
  tuple(real, int) x;
}
